--- a/work/IMP_002.html
+++ b/work/IMP_002.html
@@ -21,7 +21,7 @@
     <div class="main">
         <header>
             <div class="logo-area">
-                <a href="#">
+                <a href="IMP_002.html">
                     <img src="../images/biz2/header_logo_2.png" alt="울산광역시">
                 </a>
             </div>
@@ -39,15 +39,15 @@
                         <li>
                             <span class="tit">사업안내</span>
                             <div class="link-item">
-                                <a href="IGP_001.html" class="on">평생교육이용권이란?</a>
+                                <a href="IGP_001.html">평생교육이용권이란?</a>
                                 <a href="IGP_001.html">평생교육이용권 사용하기</a>
                             </div>
                         </li>
                         <li>
                             <span class="tit">이용권 사용기관</span>
                             <div class="link-item">
-                                <a href="#">사용기관 신청</a>
-                                <a href="#">사용기관 신청 현황</a>
+                                <a href="ILP_001.html">사용기관 신청</a>
+                                <a href="IIP_800.html">사용기관 신청 현황</a>
                                 <a class="hidden" href="#">이용권 사용내역</a>
                                 <a href="#">교육결과 관리</a>
                                 <a class="hidden" href="#">교육과정 정보</a>
@@ -60,9 +60,9 @@
                             <span class="tit">게시판</span>
                             <div class="link-item">
                                 <a href="IIP_001.html">공지사항</a>
-                                <a href="LNP_100.html">자료실</a>
-                                <a href="LNP_200.html">자주하는질문</a>
-                                <a href="IIP_500.html">질의응답</a>
+                                <a href="INP_100.html">자료실</a>
+                                <a href="INP_200.html">자주하는질문</a>
+                                <a href="INP_200.html">질의응답</a>
                             </div>
                         </li>
                     </ul>
@@ -79,7 +79,7 @@
                         <div class="link login-btn">
                             <p class="agency-info">기관명</p>
                             <p class="agency-info">담당자 : 김담당</p>
-                            <a href="#" class="txt">기관정보 수정</a>
+                            <a href="IIP_400.html" class="txt">기관정보 수정</a>
                         </div>
                         <button class="tikcet-btn link">
                             <span class="txt">이용권 사용 내역</span>
@@ -94,21 +94,21 @@
                             <div class="swiper">
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide">
-                                        <a href="#">
+                                        <a href="./IIP_002.html">
                                             <span class="ic new">NEW</span>
                                             <span class="txt">2024년 10월 1일 (화) '국군의 날' 휴무 안내</span>
                                             <span class="day">2024.10.25</span>
                                         </a>
                                     </div>
                                     <div class="swiper-slide">
-                                        <a href="#">
+                                        <a href="./IIP_002.html">
                                             <span class="ic new">NEW</span>
                                             <span class="txt">2024년 10월 1일 (화) '국군의 날' 휴무 안내</span>
                                             <span class="day">2024.10.25</span>
                                         </a>
                                     </div>
                                     <div class="swiper-slide">
-                                        <a href="#">
+                                        <a href="./IIP_002.html">
                                             <span class="ic new">NEW</span>
                                             <span class="txt">2024년 10월 1일 (화) '국군의 날' 휴무 안내</span>
                                             <span class="day">2024.10.25</span>
@@ -117,13 +117,13 @@
                                 </div>
                             </div>
                         </div>
-                        <button class="more-btn"><span class="blind">공지사항 더보기</span></button>
+                        <button class="more-btn" onclick="location.href='./IIP_001.html'"><span class="blind">공지사항 더보기</span></button>
                     </div>
                 </div>
                 <div class="more-link-area">
                     <a href="IGP_001.html">평생교육<br>이용권이란?</a>
-                    <a href="#">질의 응답</a>
-                    <a href="LNP_100.html">자료실</a>
+                    <a href="INP_200.html">질의 응답</a>
+                    <a href="INP_100.html">자료실</a>
                 </div>
             </div>
         </div>
