--- a/work/IIP_203.html
+++ b/work/IIP_203.html
@@ -20,11 +20,16 @@
 <body>
     <header>
         <div class="logo-area">
-            <a href="#">
+            <a href="IMP_002.html">
                 <img src="../images/biz2/header_logo_2.png" alt="울산광역시">
             </a>
         </div>
         <div class="menu-area">
+            <!-- 로그인 시 -->
+            <a href="#" class="log-info">
+                <img src="../images/biz2/ico/ico_loguser.svg" alt="로그인 유저 아이콘, 로그아웃 아이콘">
+                <span class="log-info-txt">로그아웃</span>
+            </a>
             <button class="open-btn">
                 <span class="blind">메뉴 열기</span>
             </button>
@@ -33,30 +38,30 @@
                     <li>
                         <span class="tit">사업안내</span>
                         <div class="link-item">
-                            <a href="#" class="on">평생교육이용권이란?</a>
-                            <a href="#">평생교육이용권 사용하기</a>
+                            <a href="IGP_001.html">평생교육이용권이란?</a>
+                            <a href="IGP_001.html">평생교육이용권 사용하기</a>
                         </div>
                     </li>
                     <li>
                         <span class="tit">이용권 사용기관</span>
                         <div class="link-item">
-                            <a href="#">사용처 안내</a>
-                            <a href="#">사용기관 신청 현황</a>
-                            <a href="#" class="hidden">이용권 사용내역</a>
-                            <a href="#" class="hidden">교육과정 정보</a>
-                            <a href="#" class="hidden">학습자 정보</a>
-                            <a href="#">기관 정보 수정</a>
-                            <a href="#" class="hidden">사용기관 연수</a>
-                            <a href="#">서약서 동의</a>
+                            <a href="ILP_001.html">사용기관 신청</a>
+                            <a href="IIP_800.html">사용기관 신청 현황</a>
+                            <a class="hidden" href="#">이용권 사용내역</a>
+                            <a href="#">교육결과 관리</a>
+                            <a class="hidden" href="#">교육과정 정보</a>
+                            <a class="hidden" href="#">학습자 정보</a>
+                            <a href="IIP_400.html">기관 정보 수정</a>
+                            <a class="hidden" href="#">사용기관 연수</a>
                         </div>
                     </li>
                     <li>
                         <span class="tit">게시판</span>
                         <div class="link-item">
-                            <a href="#">공지사항</a>
-                            <a href="#">자료실</a>
-                            <a href="#">자주하는질문</a>
-                            <a href="#">질의응답</a>
+                            <a href="IIP_001.html">공지사항</a>
+                            <a href="INP_100.html">자료실</a>
+                            <a href="INP_200.html">자주하는질문</a>
+                            <a href="INP_200.html">질의응답</a>
                         </div>
                     </li>
                 </ul>
@@ -108,7 +113,7 @@
                             <td colspan="3">
                                 <div class="input-wrap">
                                     <input type="text" id="a" placeholder="평생교육강좌">
-                                    <button type="button" class="btns" onclick="$('[data-pop=pop-1]').show();">학점은행제 평가인정 강좌 조회</button>
+                                    <button type="button" class="btns layer-btn" onclick="$('[data-pop=pop-1]').show();">학점은행제 평가인정 강좌 조회</button>
                                 </div>
                             </td>
                         </tr>
@@ -153,7 +158,7 @@
                                     <option value="1">3</option>
                                     <option value="1">4</option>
                                 </select>
-                                <button type="button" onclick="$('[data-pop=pop-2]').show();" class="btns">상세보기</button>
+                                <button type="button" class="btns layer-btn" onclick="$('[data-pop=pop-2]').show();">상세보기</button>
                             </td>
                             <th class="txt-l">자주쓰는 강좌</th>
                             <td>
@@ -317,7 +322,7 @@
                                 <th>출석일수</th>
                                 <th>이수여부</th>
                                 <th>
-                                    <button type="button" class="sample-pop-btn btns bg-blue" onclick="$('[data-pop=pop-3]').show();">추가</button>
+                                    <button type="button" class="layer-btn btns bg-blue" onclick="$('[data-pop=pop-3]').show();">추가</button>
                                 </th>
                             </tr>
                         </thead>
