--- a/work/IIP_500.html
+++ b/work/IIP_500.html
@@ -20,11 +20,16 @@
 <body>
     <header>
         <div class="logo-area">
-            <a href="#">
+            <a href="IMP_002.html">
                 <img src="../images/biz2/header_logo_2.png" alt="울산광역시">
             </a>
         </div>
         <div class="menu-area">
+            <!-- 로그인 시 -->
+            <a href="#" class="log-info">
+                <img src="../images/biz2/ico/ico_loguser.svg" alt="로그인 유저 아이콘, 로그아웃 아이콘">
+                <span class="log-info-txt">로그아웃</span>
+            </a>
             <button class="open-btn">
                 <span class="blind">메뉴 열기</span>
             </button>
@@ -33,30 +38,30 @@
                     <li>
                         <span class="tit">사업안내</span>
                         <div class="link-item">
-                            <a href="#" class="on">평생교육이용권이란?</a>
-                            <a href="#">평생교육이용권 사용하기</a>
+                            <a href="IGP_001.html">평생교육이용권이란?</a>
+                            <a href="IGP_001.html">평생교육이용권 사용하기</a>
                         </div>
                     </li>
                     <li>
                         <span class="tit">이용권 사용기관</span>
                         <div class="link-item">
-                            <a href="#">사용처 안내</a>
-                            <a href="#">사용기관 신청 현황</a>
-                            <a href="#" class="hidden">이용권 사용내역</a>
-                            <a href="#" class="hidden">교육과정 정보</a>
-                            <a href="#" class="hidden">학습자 정보</a>
-                            <a href="#">기관 정보 수정</a>
-                            <a href="#" class="hidden">사용기관 연수</a>
-                            <a href="#">서약서 동의</a>
+                            <a href="ILP_001.html">사용기관 신청</a>
+                            <a href="IIP_800.html">사용기관 신청 현황</a>
+                            <a class="hidden" href="#">이용권 사용내역</a>
+                            <a href="#">교육결과 관리</a>
+                            <a class="hidden" href="#">교육과정 정보</a>
+                            <a class="hidden" href="#">학습자 정보</a>
+                            <a href="IIP_400.html">기관 정보 수정</a>
+                            <a class="hidden" href="#">사용기관 연수</a>
                         </div>
                     </li>
                     <li>
                         <span class="tit">게시판</span>
                         <div class="link-item">
-                            <a href="#">공지사항</a>
-                            <a href="#">자료실</a>
-                            <a href="#">자주하는질문</a>
-                            <a href="#">질의응답</a>
+                            <a href="IIP_001.html">공지사항</a>
+                            <a href="INP_100.html">자료실</a>
+                            <a href="INP_200.html">자주하는질문</a>
+                            <a href="INP_200.html">질의응답</a>
                         </div>
                     </li>
                 </ul>
@@ -71,7 +76,7 @@
             <span class="home"><span class="blind">홈</span></span>
             <div class="location-box">
                 <span class="arrow">사업안내</span>
-                <span class="arrow">사용기관 질의응답</span>
+                <span class="arrow">질의응답</span>
             </div>
         </div>
     </div>
@@ -82,7 +87,7 @@
                     <a href="#tab-1">자주하는 질문</a>
                 </li>
                 <li role="tab" aria-selected="false" aria-controls="tab-2" data-tab="tab-2">
-                    <a href="#tab-2">사용기관 질의응답</a>
+                    <a href="#tab-2">질의응답</a>
                 </li>
             </ul>
             <div class="tab-conts-wrap">
@@ -149,7 +154,71 @@
                                         <td>완료</td>
                                     </tr>
                                     <tr>
-                                        <td>1</td>
+                                        <td>2</td>
+                                        <td>디지털</td>
+                                        <td>이용권 질의응답</td>
+                                        <td>관리자</td>
+                                        <td>2024-09-12</td>
+                                        <td>미완료</td>
+                                    </tr>
+                                    <tr>
+                                        <td>3</td>
+                                        <td>디지털</td>
+                                        <td>이용권 질의응답</td>
+                                        <td>관리자</td>
+                                        <td>2024-09-12</td>
+                                        <td>미완료</td>
+                                    </tr>
+                                    <tr>
+                                        <td>4</td>
+                                        <td>디지털</td>
+                                        <td>이용권 질의응답</td>
+                                        <td>관리자</td>
+                                        <td>2024-09-12</td>
+                                        <td>미완료</td>
+                                    </tr>
+                                    <tr>
+                                        <td>5</td>
+                                        <td>디지털</td>
+                                        <td>이용권 질의응답</td>
+                                        <td>관리자</td>
+                                        <td>2024-09-12</td>
+                                        <td>미완료</td>
+                                    </tr>
+                                    <tr>
+                                        <td>6</td>
+                                        <td>디지털</td>
+                                        <td>이용권 질의응답</td>
+                                        <td>관리자</td>
+                                        <td>2024-09-12</td>
+                                        <td>미완료</td>
+                                    </tr>
+                                    <tr>
+                                        <td>7</td>
+                                        <td>디지털</td>
+                                        <td>이용권 질의응답</td>
+                                        <td>관리자</td>
+                                        <td>2024-09-12</td>
+                                        <td>미완료</td>
+                                    </tr>
+                                    <tr>
+                                        <td>8</td>
+                                        <td>디지털</td>
+                                        <td>이용권 질의응답</td>
+                                        <td>관리자</td>
+                                        <td>2024-09-12</td>
+                                        <td>미완료</td>
+                                    </tr>
+                                    <tr>
+                                        <td>9</td>
+                                        <td>디지털</td>
+                                        <td>이용권 질의응답</td>
+                                        <td>관리자</td>
+                                        <td>2024-09-12</td>
+                                        <td>미완료</td>
+                                    </tr>
+                                    <tr>
+                                        <td>10</td>
                                         <td>디지털</td>
                                         <td>이용권 질의응답</td>
                                         <td>관리자</td>
@@ -174,7 +243,7 @@
                 </div>
                 <div id="tab-2" role="tab-panel" class="tab-cont">
                     <div class="page-header">
-                        <h2 class="page-header-tit">사용기관 질의응답</h2>
+                        <h2 class="page-header-tit">질의응답</h2>
                     </div>            
                     <div class="contents">
                         <div class="search-area">
@@ -235,7 +304,71 @@
                                         <td>완료</td>
                                     </tr>
                                     <tr>
-                                        <td>1</td>
+                                        <td>2</td>
+                                        <td>디지털</td>
+                                        <td>이용권 질의응답</td>
+                                        <td>관리자</td>
+                                        <td>2024-09-12</td>
+                                        <td>미완료</td>
+                                    </tr>
+                                    <tr>
+                                        <td>3</td>
+                                        <td>디지털</td>
+                                        <td>이용권 질의응답</td>
+                                        <td>관리자</td>
+                                        <td>2024-09-12</td>
+                                        <td>미완료</td>
+                                    </tr>
+                                    <tr>
+                                        <td>4</td>
+                                        <td>디지털</td>
+                                        <td>이용권 질의응답</td>
+                                        <td>관리자</td>
+                                        <td>2024-09-12</td>
+                                        <td>미완료</td>
+                                    </tr>
+                                    <tr>
+                                        <td>5</td>
+                                        <td>디지털</td>
+                                        <td>이용권 질의응답</td>
+                                        <td>관리자</td>
+                                        <td>2024-09-12</td>
+                                        <td>미완료</td>
+                                    </tr>
+                                    <tr>
+                                        <td>6</td>
+                                        <td>디지털</td>
+                                        <td>이용권 질의응답</td>
+                                        <td>관리자</td>
+                                        <td>2024-09-12</td>
+                                        <td>미완료</td>
+                                    </tr>
+                                    <tr>
+                                        <td>7</td>
+                                        <td>디지털</td>
+                                        <td>이용권 질의응답</td>
+                                        <td>관리자</td>
+                                        <td>2024-09-12</td>
+                                        <td>미완료</td>
+                                    </tr>
+                                    <tr>
+                                        <td>8</td>
+                                        <td>디지털</td>
+                                        <td>이용권 질의응답</td>
+                                        <td>관리자</td>
+                                        <td>2024-09-12</td>
+                                        <td>미완료</td>
+                                    </tr>
+                                    <tr>
+                                        <td>9</td>
+                                        <td>디지털</td>
+                                        <td>이용권 질의응답</td>
+                                        <td>관리자</td>
+                                        <td>2024-09-12</td>
+                                        <td>미완료</td>
+                                    </tr>
+                                    <tr>
+                                        <td>10</td>
                                         <td>디지털</td>
                                         <td>이용권 질의응답</td>
                                         <td>관리자</td>
