--- a/work/LCP_001.html
+++ b/work/LCP_001.html
@@ -19,12 +19,18 @@
 
 <body>
     <header>
-        <div class="logo-area">
-            <a href="#">
-                <img src="../images/biz2/header_logo_2.png" alt="울산광역시">
-            </a>
+        <div class="logo-area multi-logo-area">
+            <a href="LMP_001.html"><img src="../images/biz2/header_logo_horizontal.svg" alt="울산광역시"></a>
+            <a href="LMP_001.html"><img src="../images/biz2/header_logo_2.png" alt="울산광역시"></a>
+            <!-- 임시 구분용 텍스트 -->
+            <span style="margin-left: 20px;">지자체 홈페이지</span>
         </div>
         <div class="menu-area">
+            <!-- 로그인 시 -->
+            <!-- <a href="#" class="log-info">
+                <img src="../images/biz2/ico/ico_loguser.svg" alt="로그인 유저 아이콘, 로그아웃 아이콘">
+                <span class="log-info-txt">로그아웃</span>
+            </a> -->
             <button class="open-btn">
                 <span class="blind">메뉴 열기</span>
             </button>
@@ -33,30 +39,48 @@
                     <li>
                         <span class="tit">사업안내</span>
                         <div class="link-item">
-                            <a href="#" class="on">평생교육이용권이란?</a>
-                            <a href="#">평생교육이용권 사용하기</a>
+                            <a href="LGP_001.html">평생교육이용권이란?</a>
+                            <a href="LGP_001.html">평생교육이용권 사용하기</a>
                         </div>
                     </li>
                     <li>
-                        <span class="tit">이용권 사용기관</span>
+                        <span class="tit">사용안내</span>
                         <div class="link-item">
-                            <a href="#">사용처 안내</a>
-                            <a href="#">사용기관 신청 현황</a>
-                            <a href="#" class="hidden">이용권 사용내역</a>
-                            <a href="#" class="hidden">교육과정 정보</a>
-                            <a href="#" class="hidden">학습자 정보</a>
-                            <a href="#">기관 정보 수정</a>
-                            <a href="#" class="hidden">사용기관 연수</a>
-                            <a href="#">서약서 동의</a>
+                            <a href="LUP_001.html">사용처 안내</a>
+                        </div>
+                    </li>
+                    <li>
+                        <span class="tit">평생교육이용권</span>
+                        <div class="link-item">
+                            <a href="LAP_100.html">이용권 신청</a>
+                            <a href="#">이의제기 신청</a>
+                            <a href="#">선정 취소 신청</a>
+                            <a href="LAP_400.html">수기 공모 신청</a>
+                        </div>
+                    </li>
+                    <li>
+                        <span class="tit">우수이용자 신청</span>
+                        <div class="link-item">
+                            <a href="LAP_001.html">우수이용자 신청</a>
                         </div>
                     </li>
                     <li>
                         <span class="tit">게시판</span>
                         <div class="link-item">
-                            <a href="#">공지사항</a>
-                            <a href="#">자료실</a>
-                            <a href="#">자주하는질문</a>
-                            <a href="#">질의응답</a>
+                            <a href="LNP_001.html">공지사항</a>
+                            <a href="LNP_100.html">자료실</a>
+                            <a href="LNP_200.html">자주하는질문</a>
+                            <a href="LNP_200.html">질의응답</a>
+                        </div>
+                    </li>
+                    <li>
+                        <span class="tit">마이페이지</span>
+                        <div class="link-item">
+                            <a href="LIP_001.html">개인정보수정</a>
+                            <a href="LIP_100.html">이용권 신청내역</a>
+                            <a href="#">이용권 이용내역</a>
+                            <a href="#">교육이수정보</a>
+                            <a href="#">이용자 이벤트</a>
                         </div>
                     </li>
                 </ul>
@@ -90,7 +114,7 @@
             </div>
             <div class="agree">
                 <h5 class="agree-tit">[필수] 개인정보 수집 · 이용 내역</h5>
-                <button class="agree-btn" onclick="$('[data-pop=pop-2]').show();">내용보기</button>
+                <button class="agree-btn layer-btn" onclick="$('[data-pop=pop-2]').show();">내용보기</button>
                 <div class="agree-radio">
                     <span>이용약관에 대한 안내 사항을 읽고 동의합니다.</span>
                     <div class="radio-box">
