--- a/work/LMP_001.html
+++ b/work/LMP_001.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/biz2/layout.css">
     <link rel="stylesheet" href="../css/biz2/main.css">
     <link rel="stylesheet" href="../css/biz2/style.css">
+    <link rel="stylesheet" href="../css/biz2/mo.css">
     <link rel="stylesheet" href="../css/biz2/swiper-bundle.min.css">
     <script src="../js/biz2/jquery.1.8.2.min.js"></script>
     <script src="../js/biz2/swiper-bundle.min.js"></script>
@@ -18,8 +19,10 @@
 <body>
     <header>
         <div class="logo-area multi-logo-area">
-            <a href="#"><img src="../images/biz2/header_logo_horizontal.svg" alt="울산광역시"></a>
-            <a href="#"><img src="../images/biz2/header_logo_2.png" alt="울산광역시"></a>
+            <a href="LMP_001.html"><img src="../images/biz2/header_logo_horizontal.svg" alt="울산광역시"></a>
+            <a href="LMP_001.html"><img src="../images/biz2/header_logo_2.png" alt="울산광역시"></a>
+            <!-- 임시 구분용 텍스트 -->
+            <span style="margin-left: 20px;">지자체 홈페이지</span>
         </div>
         <div class="menu-area">
             <!-- 로그인 시 -->
@@ -35,34 +38,48 @@
                     <li>
                         <span class="tit">사업안내</span>
                         <div class="link-item">
-                            <a href="IGP_001.html">평생교육이용권이란?</a>
-                            <a href="IGP_001.html">평생교육이용권 사용하기</a>
+                            <a href="LGP_001.html">평생교육이용권이란?</a>
+                            <a href="LGP_001.html">평생교육이용권 사용하기</a>
                         </div>
                     </li>
                     <li>
                         <span class="tit">사용안내</span>
                         <div class="link-item">
-                            <a href="#">사용처 안내</a>
+                            <a href="LUP_001.html">사용처 안내</a>
                         </div>
                     </li>
                     <li>
                         <span class="tit">평생교육이용권</span>
                         <div class="link-item">
-                            <a href="#">이용권 신청</a>
+                            <a href="LAP_100.html">이용권 신청</a>
+                            <a href="#">이의제기 신청</a>
+                            <a href="#">선정 취소 신청</a>
+                            <a href="LAP_400.html">수기 공모 신청</a>
                         </div>
                     </li>
                     <li>
-                        <span class="tit">이용권 사용기관</span>
+                        <span class="tit">우수이용자 신청</span>
                         <div class="link-item">
-                            <a href="#">이용권 사용기관 신청</a>
+                            <a href="LAP_001.html">우수이용자 신청</a>
                         </div>
                     </li>
                     <li>
                         <span class="tit">게시판</span>
                         <div class="link-item">
-                            <a href="IIP_001.html">공지사항</a>
+                            <a href="LNP_001.html">공지사항</a>
                             <a href="LNP_100.html">자료실</a>
                             <a href="LNP_200.html">자주하는질문</a>
+                            <a href="LNP_200.html">질의응답</a>
+                        </div>
+                    </li>
+                    <li>
+                        <span class="tit">마이페이지</span>
+                        <div class="link-item">
+                            <a href="LIP_001.html">개인정보수정</a>
+                            <a href="LIP_100.html">이용권 신청내역</a>
+                            <a href="#">이용권 이용내역</a>
+                            <a href="#">교육이수정보</a>
+                            <a href="#">이용자 이벤트</a>
                         </div>
                     </li>
                 </ul>
@@ -75,10 +92,17 @@
     <div class="container temp">
         <div class="temp-cont lgp-1">
             <div class="temp-links-wrap">
-                <a href="IGP_001.html" title="평생교육이용권이란"></a>
-                <a href="IMP_001.html" title="사용기관 로그인 및 등록 신청"></a>
-                <a href="IIP_500.html" title="질의 응답"></a>
-                <a href="LNP_100.html" title="자료실"></a>
+                <a href="LCP_001.html" title="지자체_로그인" style="width: 260px; height: 50px; left: 20px; top: 250px;"></a>
+                <a href="LAP_100.html" title="지자체_이용권신청" style="width: 302px; height: 280px; left: 324px;"></a>
+                <a href="LUP_001.html" title="지자체_사용처확인" style="width: 302px; height: 280px; left: 648px;"></a>
+                <a href="LNP_001.html" title="지자체_공지사항" style="width: 24px; height: 24px; top: 372px; left: 908px;"></a>
+                <a href="LNP_002.html" title="지자체_공지사항상세" style="width: 290px; height: 170px; top: 430px; left: 20px;"></a>
+                <a href="LNP_002.html" title="지자체_공지사항상세" style="width: 290px; height: 170px; top: 430px; left: 330px;"></a>
+                <a href="LNP_002.html" title="지자체_공지사항상세" style="width: 290px; height: 170px; top: 430px; left: 640px;"></a>
+                <a href="LGP_001.html" title="지자체_평생교육이용권이란?"></a>
+                <a href="IMP_001.html" title="지자체_사용기관로그인 및 등록 신청" style="top: 189px;"></a>
+                <a href="LNP_200.html" title="지자체_질의응답" style="top: 339px;"></a>
+                <a href="LNP_100.html" title="지자체_자료실" style="top: 489px;"></a>
             </div>
         </div>
     </div>
@@ -112,5 +136,41 @@
             </div>
         </div>
     </footer>
+    <div class="layer-pop" data-pop="pop-1">
+        <div class="layer-content layer-apply-content" style="--max-width: 640px">
+            <div class="layer-scroll">
+                <div class="info-area layer-apply-yes layer-apply mt-0">
+                    <span class="ico"></span>
+                    <p class="desc">
+                        이용권을 신청하시기 전 <span class="color-primary-1c">‘평생교육이용권이란?’</span>을
+                        <br class="lg-only">
+                        클릭하여 사업내용을 충분히 숙지하신 후 신청 바랍니다
+                    </p>
+                    <div class="layer-btn-wrap">
+                        <button class="btns" onclick="$('[data-pop=pop-1]').hide();">확인</button>
+                    </div>
+                </div>
+                <button class="close-btn" onclick="$('[data-pop=pop-1]').hide();"><span class="blind">레이어 팝업 닫기</span></button>
+            </div>
+        </div>
+    </div>
+    <div class="layer-pop" data-pop="pop-2">
+        <div class="layer-content layer-apply-content" style="--max-width: 640px">
+            <div class="layer-scroll">
+                <div class="info-area layer-apply-no layer-apply mt-0">
+                    <span class="ico"></span>
+                    <p class="desc">
+                        현재는 신청기간이 아닙니다
+                        <br class="lg-only">
+                        (신청시간 : 매일 09:00 ~ 22:00)
+                    </p>
+                    <div class="layer-btn-wrap">
+                        <button class="btns" onclick="$('[data-pop=pop-2]').hide();">확인</button>
+                    </div> 
+                </div>
+                <button class="close-btn" onclick="$('[data-pop=pop-2]').hide();"><span class="blind">레이어 팝업 닫기</span></button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
