--- a/work/LMP_002.html
+++ b/work/LMP_002.html
@@ -18,15 +18,17 @@
 <body>
     <header>
         <div class="logo-area multi-logo-area">
-            <a href="#"><img src="../images/biz2/header_logo_horizontal.svg" alt="울산광역시"></a>
-            <a href="#"><img src="../images/biz2/header_logo_2.png" alt="울산광역시"></a>
+            <a href="LMP_001.html"><img src="../images/biz2/header_logo_horizontal.svg" alt="울산광역시"></a>
+            <a href="LMP_001.html"><img src="../images/biz2/header_logo_2.png" alt="울산광역시"></a>
+            <!-- 임시 구분용 텍스트 -->
+            <span style="margin-left: 20px;">지자체 홈페이지</span>
         </div>
         <div class="menu-area">
             <!-- 로그인 시 -->
-            <a href="#" class="log-info">
+            <!-- <a href="#" class="log-info">
                 <img src="../images/biz2/ico/ico_loguser.svg" alt="로그인 유저 아이콘, 로그아웃 아이콘">
                 <span class="log-info-txt">로그아웃</span>
-            </a>
+            </a> -->
             <button class="open-btn">
                 <span class="blind">메뉴 열기</span>
             </button>
@@ -35,51 +37,45 @@
                     <li>
                         <span class="tit">사업안내</span>
                         <div class="link-item">
-                            <a href="IGP_001.html">평생교육이용권이란?</a>
-                            <a href="IGP_001.html">평생교육이용권 사용하기</a>
+                            <a href="LGP_001.html">평생교육이용권이란?</a>
+                            <a href="LGP_001.html">평생교육이용권 사용하기</a>
                         </div>
                     </li>
                     <li>
                         <span class="tit">사용안내</span>
                         <div class="link-item">
-                            <a href="#">사용처 안내</a>
-                        </div>
-                    </li>
-                    <li>
-                        <span class="tit">우수이용자 신청</span>
-                        <div class="link-item">
-                            <a href="#">우수이용자 신청</a>
+                            <a href="LUP_001.html">사용처 안내</a>
                         </div>
                     </li>
                     <li>
                         <span class="tit">평생교육이용권</span>
                         <div class="link-item">
-                            <a href="#">이용권 신청</a>
+                            <a href="LAP_100.html">이용권 신청</a>
                             <a href="#">이의제기 신청</a>
                             <a href="#">선정 취소 신청</a>
-                            <a href="#">수기 공모 신청</a>
+                            <a href="LAP_400.html">수기 공모 신청</a>
                         </div>
                     </li>
                     <li>
-                        <span class="tit">이용권 사용기관</span>
+                        <span class="tit">우수이용자 신청</span>
                         <div class="link-item">
-                            <a href="#">이용권 사용기관 신청</a>
+                            <a href="LAP_001.html">우수이용자 신청</a>
                         </div>
                     </li>
                     <li>
                         <span class="tit">게시판</span>
                         <div class="link-item">
-                            <a href="IIP_001.html">공지사항</a>
+                            <a href="LNP_001.html">공지사항</a>
                             <a href="LNP_100.html">자료실</a>
                             <a href="LNP_200.html">자주하는질문</a>
-                            <a href="#">이용자 질의응답</a>
+                            <a href="LNP_200.html">질의응답</a>
                         </div>
                     </li>
                     <li>
                         <span class="tit">마이페이지</span>
                         <div class="link-item">
-                            <a href="#">개인정보수정</a>
-                            <a href="#">이용권 신청내역</a>
+                            <a href="LIP_001.html">개인정보수정</a>
+                            <a href="LIP_100.html">이용권 신청내역</a>
                             <a href="#">이용권 이용내역</a>
                             <a href="#">교육이수정보</a>
                             <a href="#">이용자 이벤트</a>
@@ -95,10 +91,17 @@
     <div class="container temp">
         <div class="temp-cont lgp-2">
             <div class="temp-links-wrap">
-                <a href="IGP_001.html" title="평생교육이용권이란"></a>
-                <a href="#" title="공란"></a>
-                <a href="IIP_500.html" title="질의 응답"></a>
-                <a href="LNP_100.html" title="자료실"></a>
+                <a href="LIP_001.html" title="지자체_개인정보 수정" style="width: 260px; height: 50px; left: 20px; top: 250px;"></a>
+                <a href="LAP_100.html" title="지자체_이용권신청" style="width: 302px; height: 280px; left: 324px;"></a>
+                <a href="LUP_001.html" title="지자체_사용처확인" style="width: 302px; height: 280px; left: 648px;"></a>
+                <a href="LNP_001.html" title="지자체_공지사항" style="width: 24px; height: 24px; top: 372px; left: 908px;"></a>
+                <a href="LNP_002.html" title="지자체_공지사항상세" style="width: 290px; height: 170px; top: 430px; left: 20px;"></a>
+                <a href="LNP_002.html" title="지자체_공지사항상세" style="width: 290px; height: 170px; top: 430px; left: 330px;"></a>
+                <a href="LNP_002.html" title="지자체_공지사항상세" style="width: 290px; height: 170px; top: 430px; left: 640px;"></a>
+                <a href="LGP_001.html" title="지자체_평생교육이용권이란?"></a>
+                <a href="IMP_001.html" title="지자체_사용기관로그인 및 등록 신청" style="top: 189px;"></a>
+                <a href="LNP_200.html" title="지자체_질의응답" style="top: 339px;"></a>
+                <a href="LNP_100.html" title="지자체_자료실" style="top: 489px;"></a>
             </div>
         </div>
     </div>
