--- a/work/PMP_001.html
+++ b/work/PMP_001.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -18,7 +18,9 @@
 <body>
     <header>
         <div class="logo-area">
-            <a href="#"><img src="../images/biz2/header_logo_2.png" alt="울산광역시"></a>
+            <a href="PMP_001.html"><img src="../images/biz2/header_logo_2.png" alt="울산광역시"></a>
+            <!-- 임시 구분용 텍스트 -->
+            <span style="margin-left: 20px;">국가포털 홈페이지</span>
         </div>
         <div class="menu-area">
             <button class="open-btn">
@@ -29,29 +31,29 @@
                     <li>
                         <span class="tit">사업안내</span>
                         <div class="link-item">
-                            <a href="IGP_001.html">평생교육이용권이란?</a>
-                            <a href="IGP_001.html">평생교육이용권 사용하기</a>
+                            <a href="PGP_001.html">평생교육이용권이란?</a>
+                            <a href="PGP_001.html">평생교육이용권 사용하기</a>
                         </div>
                     </li>
                     <li>
                         <span class="tit">사용안내</span>
                         <div class="link-item">
-                            <a href="#">사용처 안내</a>
+                            <a href="PUP_001.html">사용처 안내</a>
                         </div>
                     </li>
                     <li>
                         <span class="tit">평생교육이용권</span>
                         <div class="link-item">
-                            <a href="#">이용권 신청</a>
+                            <a href="PAP_001.html">이용권 신청</a>
                         </div>
                     </li>
                     <li>
                         <span class="tit">게시판</span>
                         <div class="link-item">
-                            <a href="IIP_001.html">공지사항</a>
-                            <a href="LNP_100.html">자료실</a>
-                            <a href="LNP_200.html">자주하는질문</a>
-                            <a href="IIP_500.html">이용자 질의응답</a>
+                            <a href="PNP_001.html">공지사항</a>
+                            <a href="PNP_100.html">자료실</a>
+                            <a href="PNP_200.html">자주하는질문</a>
+                            <a href="PNP_200.html">질의응답</a>
                         </div>
                     </li>
                 </ul>
@@ -62,13 +64,14 @@
         </div>
     </header>
     <div class="container temp">
+        <!-- pmp-1 -->
         <div class="temp-cont pmp-1">
             <div class="temp-links-wrap">
-                <a class="temp-links-special" href="IGP_001.html" title="평생교육이용권이란?"></a>
-                <a href="#" title="공란"></a>
-                <a href="#" title="공란"></a>
-                <a href="IIP_500.html" title="질의 응답"></a>
-                <a href="LNP_100.html" title="자료실"></a>
+                <a href="PGP_001.html" class="temp-links-special" title="포털_평생교육이용권이란?" style="width: 280px; height: 580px; left: 0;"></a>
+                <a href="PNP_001.html" title="포털_공지사항" style="width: 24px; height: 24px; right: 17px; top: 66px;"></a>
+                <a href="PNP_002.html" title="포털_공지사항 상세" style="width: 270px; height: 103px; top: 130px; right: 20px;"></a>
+                <a href="PNP_200.html" title="포털_질의 응답" style="width: 300px; height: 131px; top: 339px; right: 0px;"></a>
+                <a href="PNP_100.html" title="포털_자료실" style="width: 300px; height: 130px; top: 489px; right: 0px;"></a>
             </div>
         </div>
     </div>
